--- a/projects/myproject/pybo/templates/base.html
+++ b/projects/myproject/pybo/templates/base.html
@@ -9,7 +9,13 @@
     <title>Keonoh Shim</title>
 </head>
 <body>
+<!-- 네비게이션바 -->
+{%include "navbar.html" %}
 {% block content %}
+{% endblock %}
+<!-- Bootstrap JS -->
+<script src="{{ url_for('static', filename='bootstrap.min.js') }}"></script>
+{% block script %}
 {% endblock %}
 </body>
 </html>
